--- a/example/build.gradle
+++ b/example/build.gradle
@@ -28,9 +28,11 @@ android {
 allprojects {
     repositories {
         maven { url 'https://jitpack.io' }
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
 }
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -39,5 +41,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':app')
+    compile project(':nest')
+    compile 'com.android.support:multidex:1.0.1'
 }
