--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="cn.nest.test">
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.TestActivity" />
+
     </application>
 
 </manifest>
